Fixed Leaflet language button on mobile and added search function for OpenLayers version

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,3 +45,9 @@ body, .map {
 	margin-top: -5%;
 	text-align: center;
 }
+.search-button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: .5rem;
+}
